# ECE298A-TPU

./: .gitignore  README.md  info.yaml  pyproject.toml
docs/: info.md
src/: PE.v  config.json  control_unit.v  delay_cell.v  memory.v  mmu_feeder.v  systolic_array_2x2.v  tpu.v
test/: Makefile  README.md  qat_model.pt  requirements.txt  tb.v  test.py
test/control_unit/: control_unit_tb.v  test_control_unit.py
test/memory/: memory_tb.v  test_memory.py
test/mmu_feeder/: mmu_feeder_tb.v  test_mmu_feeder.py
test/systolic_array/: systolic_array_tb.v  test_systolic_array.py
test/tpu/: mnist_test_data.npz  neural_inference.py  qat_model.pt  qat_model_scripted.pt  qat_model_torch_dialect.mlir  tb.v  test_tpu.py  torch_backend.py  tpu_pt_backend.py  train_qat_model.py
test/tpu/mlir_chip_compiler/: LowerToTpu.cpp  TpuCodeGen.cpp  TpuDialect.cpp  TpuDialect.h
test/uvm_test/: test_uvm.py
