[tool.poetry]
name = "ece298a-tpu"
version = "0.1.0"
description = ""
authors = ["Yash Karthik <52369876+YashKarthik@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cocotb = "^1.9.2"
numpy = "^2.3.2"
pytest = "^8.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
